// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchInput renders renders the handlePress state 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "alignSelf": "stretch",
      "backgroundColor": "rgba(0, 0, 0, 0.70)",
      "borderRadius": 5,
      "flexDirection": "row",
      "height": 48,
      "opacity": 1,
      "paddingHorizontal": 15,
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={false}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": undefined,
          "fontSize": 12,
        },
        Object {
          "color": "#FFFFFF",
          "fontSize": 24,
          "marginRight": 7.5,
        },
        Object {
          "fontFamily": "Material Icons",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        Object {},
      ]
    }
  >
    
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#FFFFFF",
        "fontSize": 17,
      }
    }
  >
    Search
  </Text>
</View>
`;

exports[`SearchInput renders renders with the minimum required props 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "alignSelf": "stretch",
      "backgroundColor": "rgba(0, 0, 0, 0.70)",
      "borderRadius": 5,
      "flexDirection": "row",
      "height": 48,
      "opacity": 1,
      "paddingHorizontal": 15,
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={false}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": undefined,
          "fontSize": 12,
        },
        Object {
          "color": "#FFFFFF",
          "fontSize": 24,
          "marginRight": 7.5,
        },
        Object {
          "fontFamily": "Material Icons",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        Object {},
      ]
    }
  >
    
  </Text>
  <TextInput
    allowFontScaling={true}
    placeholder="Search"
    placeholderTextColor="#FFFFFF"
    style={
      Array [
        Object {
          "flex": 1,
        },
        Object {
          "color": "#FFFFFF",
          "fontSize": 17,
        },
      ]
    }
    underlineColorAndroid="transparent"
  />
</View>
`;
